# ffgl-rs

./: .gitmodules  Cargo.toml
build-common/src/: glsl_120.rs  isf_glsl_preprocess.rs
ffgl-core/: Cargo.toml  build.rs
ffgl-core/FFGLSDK/Include/: FFGL.h  FreeFrame.h
ffgl-core/src/: conversions.rs  entry.rs  info.rs  inputs.rs  plugin_main.rs
ffgl-core/src/ffi/: ffgl1.rs  ffgl2.rs  util.rs
ffgl-core/src/handler/: mod.rs  simplified.rs
ffgl-core/src/parameters/: builtin.rs  handler.rs  info.rs
ffgl-glium/src/: gl_backend.rs  lib.rs  validate_gl.rs
