[workspace.package]
authors = ["Edward Taylor <dev@edt.nz>"]
license = "	GPL-3.0-or-later"
homepage = "https://github.com/edeetee/ffgl-rs"
repository = "https://github.com/edeetee/ffgl-rs"

[workspace]
resolver = "2"
members = [
    "example-raw",
    "ffgl-glium",
    "ffgl-core",
    "ffgl-isf",
    "build-common",
    "example-sdfer", "shadertoy",
]
default-members = ["ffgl-core"]


# [lib]
# crate-type = ["lib"]
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
gl = "0.14.0"
itertools = "0.14.0"
glium = "0.36.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = { version = "0.1.40", features = ["log"] }
anyhow = "1.0.102"

[profile.release]
debug = false
# strip = true
# lto = true
# codegen-units = 1
panic = "abort"